add video to Tour section

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -22,6 +22,7 @@
 "emmet.extensionsPath": ".theia",
 "cSpell.words": [
     "Arek",
+    "Glendalough",
     "Hylands",
     "Lukas",
     "Medvedevas",
