add more video and style

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -22,6 +22,7 @@
 "emmet.extensionsPath": ".theia",
 "cSpell.words": [
     "Arek",
+    "Arek’s",
     "Glendalough",
     "Hylands",
     "Lukas",
@@ -29,6 +30,10 @@
     "Pexels",
     "Sanman",
     "Voortman",
-    "moher"
+    "absolutevisuals",
+    "allowfullscreen",
+    "moher",
+    "s",
+    "youtube"
 ]
 }
