add logo.ico, favicon to the site tab, correct spelling

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -23,17 +23,36 @@
 "cSpell.words": [
     "Arek",
     "Arek’s",
+    "Bootsrap",
+    "Eliyahu",
     "Glendalough",
     "Hylands",
+    "Kukla",
     "Lukas",
+    "Lynks",
     "Medvedevas",
     "Pexels",
+    "Photoshop",
+    "Pixaby",
     "Sanman",
     "Voortman",
+    "Wireframe",
+    "Wireframing",
     "absolutevisuals",
     "allowfullscreen",
+    "altthehikers",
+    "boxshadowgenerator",
+    "djibe",
+    "fontsgoogle",
+    "freelogodesign",
+    "informatyki",
+    "kurshtml",
     "moher",
+    "pasja",
     "s",
+    "stackoverflow",
+    "webbuilderexpert",
+    "wireframes",
     "youtube"
 ]
 }
