add to README.md bugs and solutions part and more

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -24,6 +24,7 @@
     "Arek",
     "Arek’s",
     "Bootsrap",
+    "Cormac",
     "Eliyahu",
     "Glendalough",
     "Hylands",
@@ -35,17 +36,26 @@
     "Photoshop",
     "Pixaby",
     "Sanman",
+    "Sinnot",
+    "Sinnott",
     "Voortman",
     "Wireframe",
     "Wireframing",
     "absolutevisuals",
     "allowfullscreen",
+    "altfixedissue",
+    "altfoundissue",
+    "altleftsidegap",
+    "altscrollingbarissue",
     "altthehikers",
+    "alttheissue",
     "boxshadowgenerator",
+    "convertico",
     "djibe",
     "fontsgoogle",
     "freelogodesign",
     "informatyki",
+    "jchost",
     "kurshtml",
     "moher",
     "pasja",
