add new media queries,paragraphs to about page

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -24,17 +24,24 @@
     "Arek",
     "Arek’s",
     "Bootsrap",
+    "Carrauntoohil",
+    "Cnoc",
     "Cormac",
     "Eliyahu",
+    "Galtymore",
+    "Gitpod",
     "Glendalough",
     "Hylands",
     "Kukla",
+    "Lugnaquillal",
     "Lukas",
     "Lynks",
     "Medvedevas",
+    "P",
     "Pexels",
     "Photoshop",
     "Pixaby",
+    "Péiste",
     "Sanman",
     "Sinnot",
     "Sinnott",
@@ -55,6 +62,7 @@
     "fontsgoogle",
     "freelogodesign",
     "informatyki",
+    "iste",
     "jchost",
     "kurshtml",
     "moher",
