add more content to TEST.md and README.md

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -23,6 +23,7 @@
 "cSpell.words": [
     "Arek",
     "Arek’s",
+    "Autoprefixer",
     "Bootsrap",
     "Carrauntoohil",
     "Cnoc",
@@ -37,11 +38,14 @@
     "Lukas",
     "Lynks",
     "Medvedevas",
+    "Moto",
     "P",
+    "Pexel",
     "Pexels",
     "Photoshop",
     "Pixaby",
     "Péiste",
+    "Responsinator",
     "Sanman",
     "Sinnot",
     "Sinnott",
@@ -50,15 +54,31 @@
     "Wireframing",
     "absolutevisuals",
     "allowfullscreen",
+    "altaboutpage",
+    "altamiresponsive",
+    "altcontactpage",
+    "altcontactpagelinks",
     "altfixedissue",
     "altfoundissue",
+    "altgallerypage",
+    "althomepage",
     "altleftsidegap",
+    "altmediaquerieslandscape",
+    "altmediaqueriessmallerdevices",
     "altscrollingbarissue",
+    "altsocialmedialinks",
     "altthehikers",
     "alttheissue",
+    "alttourspage",
+    "alttoutsvideotrips",
+    "altvalidatorcss",
+    "altvalidatorhtml",
+    "altvalidatrohtml",
+    "altwelcomesign",
     "boxshadowgenerator",
     "convertico",
     "djibe",
+    "ecounteredissues",
     "fontsgoogle",
     "freelogodesign",
     "informatyki",
